fixed collectstatic, absolute z-index, and added google analytics snippet

--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -127,6 +127,7 @@ header {
     top: 0;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 3px;
     border-bottom: 1px solid @blueborder;
+    z-index: 200;
     
     #header-content {
         width: 100%;
